--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
-    implementation 'com.android.support:design:28.0.0-rc01'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     //RxJava
     implementation 'io.reactivex.rxjava2:rxjava:2.1.17'
@@ -38,16 +38,20 @@ dependencies {
     implementation 'android.arch.persistence.room:rxjava2:1.1.1'
     androidTestImplementation "android.arch.persistence.room:testing:$rootProject.roomVersion"
     //WorkManager
-    implementation 'android.arch.work:work-runtime:1.0.0-alpha08'
+    implementation 'android.arch.work:work-runtime:1.0.0-alpha10'
     //Retrofit&GSON
     implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     //Lifecycle
     implementation "android.arch.lifecycle:extensions:$rootProject.archLifecycleVersion"
     annotationProcessor "android.arch.lifecycle:compiler:$rootProject.archLifecycleVersion"
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+    //Dagger
+    implementation 'com.google.dagger:dagger:2.19'
+    implementation 'com.google.dagger:dagger-android-support:2.19'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.19'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
