--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     //RxJava
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.17'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     // Room
@@ -38,7 +38,7 @@ dependencies {
     implementation 'android.arch.persistence.room:rxjava2:1.1.1'
     androidTestImplementation "android.arch.persistence.room:testing:$rootProject.roomVersion"
     //WorkManager
-    implementation 'android.arch.work:work-runtime:1.0.0-alpha10'
+    implementation 'android.arch.work:work-runtime:1.0.0-beta02'
     //Retrofit&GSON
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
