--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     // Room
     implementation "android.arch.persistence.room:runtime:$rootProject.roomVersion"
+    implementation 'com.android.support:exifinterface:28.0.0'
     annotationProcessor "android.arch.persistence.room:compiler:$rootProject.roomVersion"
     implementation 'android.arch.persistence.room:rxjava2:1.1.1'
     androidTestImplementation "android.arch.persistence.room:testing:$rootProject.roomVersion"
